--- a/_sass/minima/_home.scss
+++ b/_sass/minima/_home.scss
@@ -18,7 +18,7 @@
 // }
 
 .post-link{
-    color:  #6f6f6f;
+    color:  #767676;
     font-weight: 700;
     font-size: 50%;
     letter-spacing: 0px;
@@ -31,11 +31,11 @@
 }
 
 .post-link:visited{
-    color:  #6f6f6f;
+    color:  #767676;
 }
 
 .post-link:hover{
-    color:  #6f6f6f;
+    color:  #767676;
 }
 
 
@@ -101,7 +101,7 @@
 }
 
 .home_post_excerpt {
-    color:  #6f6f6f;
+    color:  #767676;
     font-size: 75%;
     // height: calc(100% - 183px - 10px - 50px);
 }
@@ -142,13 +142,13 @@
 }
 
 .post-link.archive-years {
-    color: #2474dc;
+    color: #206ac8;
     //text-decoration: aqua;
     font-size: 100%;
 }
 
 .post-link.archive-years:visited {
-    color: #2474dc;
+    color: #206ac8;
 }
 
 .home_post_nav {
