--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -91,7 +91,7 @@
   }
 
   .page-link {
-    color: #6f6f6f;
+    color: #767676;
     line-height: $base-line-height;
 
     // Gaps between nav items, but not on the last one
@@ -225,19 +225,19 @@
 
 .post-meta {
   font-size: $small-font-size;
-  color: #6f6f6f;
+  color: #767676;
 }
 
 .post-meta .dt-published {
-  color: #6f6f6f;
+  color: #767676;
 }
 
 .post-meta .p-author {
-  color: #6f6f6f;
+  color: #767676;
 }
 
 .footer-col .p-name {
-  color: #6f6f6f;
+  color: #767676;
 }
 
 .footer-col .u-email {
@@ -247,7 +247,7 @@
 .post-link {
   display: block;
   @include relative-font-size(1.5);
-  color: #6f6f6f;
+  color: #767676;
 }
 
 
